Fixed gray highlighting on iOS

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -860,6 +860,7 @@ li {
 }
 
 *:focus {
+  -webkit-tap-highlight-color: transparent;
   outline: 0 !important;
 }
 
